<resources>
    <string name="app_name">!Ducktype</string>

    <string name="settings">Settings</string>
    <string name="play_button">play</string>
    <string name="logo_gif">logo gif</string>
    <string name="levelchoose"> levelchoose</string>

    <string name="title_activity_level_screen">level_screen</string>
    <string name="title_activity_level1">level1</string>

    <string name="levels">LEVELS</string>
    <string name="lvl1">Level 1</string>
    <string name="lvl2">Level 2</string>
    <string name="lvl3">Level 3</string>
    <string name="lvl4">Level 4</string>
    <string name="lvl5">Level 5</string>

    <string name="begin">begin!</string>

    <string name="easy">EASY</string>
    <string name="medium">NORMAL</string>
    <string name="hard">HARD</string>


    <string name="cleared">LEVEL CLEARED</string>
    <string name="failed">LEVEL FAILED</string>


    <string name="instructions">Answer TEN questions correctly each level to move on to the next level !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="directions">Answer TEN questions correctly and you move onto the next level.
        Answer ONE question wrong and you will have to start the level over. Think over your answers carefully. There is no timer :D</string>

    <string name="FinalLevelDirections">This is the final level. You made it this far! You already know the drill: TEN correct answers and you win, but ONE
    wrong answer and you start the level over. GOOD LUCK :D</string>


</resources>
