<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/level2"
    tools:context=".Level2.LevelTwoIntroScreenFragment"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/level2-def"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mostly_mono"
            android:text="@string/medium"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mostly_mono"
            android:text="Tables and Forms"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <ImageButton
            android:id="@+id/LevelTwoBeginButton"
            android:layout_width="188dp"
            android:layout_height="100dp"
            android:background="@null"
            android:contentDescription="@string/begin"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/begin_button"
            tools:ignore="onClick "/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mostly_mono"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:text="@string/directions"
            android:textAlignment="center"
            android:textColor="@color/colorBackgroundDark"
            android:textSize="18sp" />
    </LinearLayout>


</FrameLayout>